Fixing a bug with the nav on mobile

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .navbar {
 	box-sizing: border-box;
 	box-shadow: 0px 4px 6px rgba(0,0,0,.5);
-	height: 70px;
+	background-color: #000000dd!important;
 }
