--- a/client/src/containers/App/App.css
+++ b/client/src/containers/App/App.css
@@ -8,7 +8,7 @@
 
 .content {
 	color: #ccc;
-	margin-top: 70px;
+	margin-top: 60px;
 	background: #222325;
 }
 
